# RxTrainer

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: Constants.h  CoolantChunk.cpp  CoolantChunk.h  CoolantLoop.cpp  CoolantLoop.h  Core.cpp  Core.h  CoreElement.cpp  CoreElement.h  MainSimulation.cpp  MainSimulation.h  ProtectiveActionLogic.cpp  ProtectiveActionLogic.h  Visualization.cpp  Visualization.h  glad.c  main.cpp
